<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Addresses">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Enter Address"
            android:padding="8dp"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/listViewAddresses"
            android:layout_width="345dp"
            android:layout_height="537dp"
            android:layout_marginTop="150dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />

        <Button
            android:id="@+id/buttonAddAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="Pick Address" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="65dp"
            android:text="Save" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>